[VMAccel][VMCL] Refactor vmaccel_compute.hpp.
With this patch we will refactor vmaccel_compute.hpp to isolate common
functionality for creating and destroying a clcontext.

Testing Done: basic_compute on localhost with OpenCL 1.2 SDK.

--- a/examples/cpp/basic_compute/CMakeLists.txt
+++ b/examples/cpp/basic_compute/CMakeLists.txt
@@ -26,11 +26,14 @@
 
 set(CMAKE_CXX_STANDARD 11)
 
+set(SOURCES
+    basic_compute.cpp)
+
 set(GLOBAL_INC ../../../common/inc)
 
 include_directories(${GLOBAL_INC})
 
-add_executable(basic_compute basic_compute.cpp)
+add_executable(basic_compute ${SOURCES})
 target_link_libraries(basic_compute vmaccel)
 set_target_properties(basic_compute
    PROPERTIES
