--- a/examples/cpp/compute_persistent_surfaces/CMakeLists.txt
+++ b/examples/cpp/compute_persistent_surfaces/CMakeLists.txt
@@ -24,6 +24,17 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-add_subdirectory(async_compute)
-add_subdirectory(basic_compute)
-add_subdirectory(compute_persistent_surfaces)
+set(CMAKE_CXX_STANDARD 11)
+
+set(SOURCES
+    compute_persistent_surfaces.cpp)
+
+set(GLOBAL_INC ../../../common/inc)
+
+include_directories(${GLOBAL_INC})
+
+add_executable(compute_persistent_surfaces ${SOURCES})
+target_link_libraries(compute_persistent_surfaces vmaccel)
+set_target_properties(compute_persistent_surfaces
+   PROPERTIES
+   RUNTIME_OUTPUT_DIRECTORY "${CMAKE_EXAMPLES_OUTPUT_DIRECTORY}")
