[VMAccel] Add IdentifierDB unit test and fix formatting.
With this patch we will add an IdentifierDB unit test to verify cross
dword bitmask ranges. Also included are fixes for formatting.

Testing Done: test_identifier_db_test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -62,3 +62,8 @@ add_unittest(
   TARGET vmaccel_allocator_allocrange_test
   SRCS vmaccel_allocator_allocrange_test.cpp
   LIBS vmaccelmgr_server)
+
+add_unittest(
+  TARGET identifier_db_test
+  SRCS identifier_db_test.cpp
+  LIBS vmaccelmgr_server)
