[VMVA] Add FFmpeg backend target.
With this patch we will add an FFmpeg backend build target, keyed off
the existence of the FFmpeg development SDK. To support this, add an
external submodule Visual Toolkit.

Testing Done: build with and without libavcodec-dev

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,7 @@
 	path = external/spirv-llvm
 	url = https://github.com/KhronosGroup/SPIRV-LLVM.git
 	branch = khronos/spirv-3.6.1
+[submodule "external/vtk"]
+	path = external/vtk
+	url = https://github.com/Kitware/VTK.git
+	branch = release
