--- a/accelerators/vmcodec/cmake/libvmcodec_client/CMakeLists.txt
+++ b/accelerators/vmcodec/cmake/libvmcodec_client/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2016-2019 VMware, Inc.
+# Copyright (c) 2019 VMware, Inc.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -24,6 +24,8 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-add_subdirectory(vmaccel)
-add_subdirectory(vmcl)
-add_subdirectory(vmcodec)
+set(CLIENT_SOURCES
+   ../../src/vmcodec_rpc_clnt.c
+   ../../src/vmcodec_rpc_xdr.c)
+
+add_library(vmcodec_client ${CLIENT_SOURCES})
