--- a/frontends/vmcodec/cmake/vmcodec_client/CMakeLists.txt
+++ b/frontends/vmcodec/cmake/vmcodec_client/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2016-2019 VMware, Inc.
+# Copyright (c) 2019 VMware, Inc.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -24,6 +24,5 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-add_subdirectory(vmaccel)
-add_subdirectory(vmcl)
-add_subdirectory(vmcodec)
+add_executable(vmcodec_clnt ../../src/vmcodec_rpc_client.c)
+target_link_libraries(vmcodec_clnt vmcodec_client vmaccel_client)
