[VMCL] Add basic_compute_nolib example target.
With this patch we will add the basic_compute_nolib example target, for
those who need to see exactly what is required for basic compute
functionality. This example was derived from the basic_compute example,
but aimed at explicit inclusion of source to build a client side
basic_compute example.

Testing Done: build, basic_compute_nolib instantiation with local vmcl_svr

--- a/examples/cpp/basic_compute_nolib/CMakeLists.txt
+++ b/examples/cpp/basic_compute_nolib/CMakeLists.txt
@@ -24,8 +24,26 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-add_subdirectory(async_compute)
-add_subdirectory(basic_compute)
-add_subdirectory(basic_compute_nolib)
-add_subdirectory(compute_persistent_surfaces)
-add_subdirectory(basic_ml)
+set(SOURCES
+    ../../../common/src/vmaccel_utils.c
+    ../../../frontends/vmaccel/src/vmaccel.c
+    ../../../frontends/vmaccel/src/vmaccel.cpp
+    ../../../accelerators/vmaccel/src/vmaccel_rpc_clnt.c
+    ../../../accelerators/vmaccel/src/vmaccel_rpc_xdr.c
+    ../../../accelerators/vmaccel/src/vmaccel_mgr_clnt.c
+    ../../../accelerators/vmaccel/src/vmaccel_rpc_xdr.c
+    ../../../accelerators/vmcl/src/vmcl_rpc_clnt.c
+    ../../../accelerators/vmcl/src/vmcl_rpc_xdr.c
+    basic_compute.cpp)
+
+set(GLOBAL_INC ../../../common/inc)
+
+include_directories(${GLOBAL_INC})
+
+set(LIBRARIES)
+
+add_executable(basic_compute_nolib ${SOURCES})
+target_link_libraries(basic_compute_nolib ${LIBRARIES})
+set_target_properties(basic_compute_nolib
+   PROPERTIES
+   RUNTIME_OUTPUT_DIRECTORY "${CMAKE_EXAMPLES_OUTPUT_DIRECTORY}")
