[VMAccel] Updates from Borathon 2019
With this patch we will add updates from the Borathon 2019 project.
This includes throwing an error for unused variables and unused
functions.

Testing Done: build, make pre-checkin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,8 @@ IF (CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    set(CMAKE_TEST_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
    set(CMAKE_EXAMPLES_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/examples)
 
+   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror=unused-function -Werror=unused-variable")
+
    set(CMAKE_BUILD_TYPE Debug)
    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -D_DEBUG")
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
