[VMAccel] Move C++ protocol from UDP to TCP.
With this patch we will move the C++ protocol from UDP to TCP.
UDP has a packet limit size ~ 65K, so we need to move to TCP
to avoid failures when sending large amounts of data over the wire.
To test this functionality, we will add a new memory benchmark,
membench, that uses a compute kernel to saturate an accelerator's
compute resources.

membench does a copy from one dataset to another as follows:

   B += A

membench command line usage is as follows:

  membench -m <# rows> -n <# cols> -l <# chunks> -i <# iterations>
           --memoryPoolA <pool enum> --memoryPoolB <pool enum>
           --kernelFunc <kernel function enum>

TODO:
- Add functionality for subdivision of large transfers
- Add functionality for non-blocking asynchronous readbacks

Testing: build, memtest, make pre-checkin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ IF (CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    set(CMAKE_EXAMPLES_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/examples)
 
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror=unused-function -Werror=unused-variable")
+   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror=misleading-indentation")
 
    set(CMAKE_BUILD_TYPE Debug)
    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -D_DEBUG")
