--- a/accelerators/vmcodec/CMakeLists.txt
+++ b/accelerators/vmcodec/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2019 VMware, Inc.
+# Copyright (c) 2019-2020 VMware, Inc.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
