[VMAccel] Move vmaccel_utils into a separate library with local variant
With this patch we will move vmaccel_utils into a separate library. This
allows us to add a local variant of the project via VMAccel_IsLocal().
The local variant will run without RPC.

Testing Done: pre-checkin, membench, membench-local

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ add_subdirectory(external/spirv-llvm)
 set(CLANG_BINARY_DIR ${CMAKE_BINARY_DIR}/external/spirv-llvm/bin)
 add_subdirectory(cmake/developer)
 
+add_subdirectory(common)
 add_subdirectory(backends)
 add_subdirectory(accelerators)
 add_subdirectory(frontends)
