--- a/frontends/vmaccel/CMakeLists.txt
+++ b/frontends/vmaccel/CMakeLists.txt
@@ -52,3 +52,4 @@ include_directories(${GLOBAL_INC})
 add_subdirectory(cmake/vmaccel_client)
 add_subdirectory(cmake/vmaccelmgr_client)
 add_subdirectory(cmake/libvmaccel)
+add_subdirectory(cmake/libvmaccel_local)
