--- a/frontends/vmaccel/cmake/libvmaccel/CMakeLists.txt
+++ b/frontends/vmaccel/cmake/libvmaccel/CMakeLists.txt
@@ -1,9 +1,9 @@
 set(SOURCES
-   ../../../../common/src/vmaccel_utils.c
    ../../src/vmaccel.c
    ../../src/vmaccel.cpp)
 
 set(LIBRARIES
+   vmaccel_utils
    vmcl_client
    vmaccelmgr_client
    vmaccel_client)
