--- a/accelerators/vmcl/cmake/vmcl_server/CMakeLists.txt
+++ b/accelerators/vmcl/cmake/vmcl_server/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2016-2019 VMware, Inc.
+# Copyright (c) 2016-2020 VMware, Inc.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -25,4 +25,4 @@
 #
 
 add_executable(vmcl_svr ../../src/vmcl_rpc_svc.c)
-target_link_libraries(vmcl_svr vmcl_server vmaccel_server)
+target_link_libraries(vmcl_svr vmcl_server vmaccel_server vmaccel_utils)
