--- a/common/cmake/libvmaccel_utils/CMakeLists.txt
+++ b/common/cmake/libvmaccel_utils/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(SOURCES
+   ../../src/vmaccel_stream.c
    ../../src/vmaccel_utils.c
    ../../src/vmaccel_utils.cpp)
 
 add_library(vmaccel_utils ${SOURCES})
+target_link_libraries(vmaccel_utils pthread)
 set_target_properties(
    PROPERTIES
    COMPILE_OPTIONS "")
