[VMAccel] Prune down the build dependencies
With this patch we will prune the build dependencies for FFMPEG
and SPIRV-LLVM. SPIRV-LLVM changes are upstreamed, so a future
change will transition the project to use released binaries.

Testing Done: Build

--- a/accelerators/CMakeLists.txt
+++ b/accelerators/CMakeLists.txt
@@ -26,5 +26,5 @@
 
 add_subdirectory(vmaccel)
 add_subdirectory(vmcl)
-add_subdirectory(vmcodec)
+#add_subdirectory(vmcodec)
 #add_subdirectory(vmxc)
