--- a/backends/CMakeLists.txt
+++ b/backends/CMakeLists.txt
@@ -28,7 +28,7 @@ set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../external/vtk/CMake")
 
 message("CMAKE_MODULE_PATH=${CMAKE_MODULE_PATH}")
 
-find_package(FFMPEG COMPONENTS AVCODEC AVDEVICE AVFOMAT AVUTIL REQUIRED)
+#find_package(FFMPEG COMPONENTS AVCODEC AVDEVICE AVFOMAT AVUTIL REQUIRED)
 
 if (FFMPEG_FOUND)
    message("FFMPEG_INCLUDE_DIR=${FFMPEG_INCLUDE_DIR}")
