--- a/accelerators/vmcl/cmake/libvmcl_rpc_client/CMakeLists.txt
+++ b/accelerators/vmcl/cmake/libvmcl_rpc_client/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2016-2019 VMware, Inc.
+# Copyright (c) 2016-2022 VMware, Inc.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -25,9 +25,8 @@
 #
 
 set(CLIENT_SOURCES
-   ../../src/vmaccel_callback_rpc_server.c
-   ../../src/vmaccel_callback_rpc_xdr.c
-   ../../src/vmaccel_rpc_clnt.c
-   ../../src/vmaccel_rpc_xdr.c)
+   ../../src/vmcl_callback_rpc_server.c
+   ../../src/vmcl_rpc_clnt.c)
 
-add_library(vmaccel_client ${CLIENT_SOURCES})
+add_library(vmcl_rpc_client ${CLIENT_SOURCES})
+target_link_libraries(vmcl_rpc_client vmcl_rpc)
