--- a/frontends/vmaccel/cmake/vmaccelmgr_client/CMakeLists.txt
+++ b/frontends/vmaccel/cmake/vmaccelmgr_client/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2016-2019 VMware, Inc.
+# Copyright (c) 2016-2022 VMware, Inc.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -25,4 +25,4 @@
 #
 
 add_executable(vmaccelmgr_clnt ../../src/vmaccel_mgr_client.c)
-target_link_libraries(vmaccelmgr_clnt vmaccelmgr_client)
+target_link_libraries(vmaccelmgr_clnt vmaccelmgr_rpc_client)
