[VMCL] Add local libraries build targets
To enable Hybrid compute, explicitly define a local library module.

Testing Done: build, basic_compute, vmcl_membench (local)

--- a/accelerators/vmaccel/cmake/libvmaccel_local_client/CMakeLists.txt
+++ b/accelerators/vmaccel/cmake/libvmaccel_local_client/CMakeLists.txt
@@ -25,9 +25,9 @@
 #
 
 set(CLIENT_SOURCES
-   ../../src/vmcl_callback_rpc_server.c
-   ../../src/vmcl_rpc_clnt.c)
+   ../../src/vmaccel_callback_rpc_server.c
+   ../../src/vmaccel_rpc_clnt.c)
 
-add_library(vmcl_rpc_client ${CLIENT_SOURCES})
-target_link_libraries(vmcl_rpc_client vmcl_rpc)
-target_compile_definitions(vmcl_rpc_client PUBLIC ENABLE_VMACCEL_LOCAL=0 ENABLE_VMACCEL_RPC=1)
+add_library(vmaccel_local_client ${CLIENT_SOURCES})
+target_link_libraries(vmaccel_local_client vmaccel_server)
+target_compile_definitions(vmaccel_local_client PUBLIC ENABLE_VMACCEL_LOCAL=1 ENABLE_VMACCEL_RPC=0)
