[VMCL] Add ENABLE_VMACCEL_RPC and ENABLE_VMACCEL_LOCAL defines
To enable Hybrid compute, add defines for each of the vmaccel library types.

Testing Done: build, basic_compute, vmcl_membench (local)

--- a/accelerators/vmaccel/cmake/libvmaccel_local_client/CMakeLists.txt
+++ b/accelerators/vmaccel/cmake/libvmaccel_local_client/CMakeLists.txt
@@ -30,4 +30,4 @@ set(CLIENT_SOURCES
 
 add_library(vmaccel_local_client ${CLIENT_SOURCES})
 target_link_libraries(vmaccel_local_client vmaccel_server)
-target_compile_definitions(vmaccel_local_client PUBLIC ENABLE_VMACCEL_LOCAL=1 ENABLE_VMACCEL_RPC=0)
+target_compile_definitions(vmaccel_local_client PRIVATE ENABLE_VMACCEL_LOCAL=1 ENABLE_VMACCEL_RPC=0)
