--- a/accelerators/vmaccel/cmake/libvmaccel_rpc_client/CMakeLists.txt
+++ b/accelerators/vmaccel/cmake/libvmaccel_rpc_client/CMakeLists.txt
@@ -30,3 +30,4 @@ set(CLIENT_SOURCES
 
 add_library(vmaccel_rpc_client ${CLIENT_SOURCES})
 target_link_libraries(vmaccel_rpc_client vmaccel_rpc)
+target_compile_definitions(vmaccel_rpc_client PRIVATE ENABLE_VMACCEL_LOCAL=0 ENABLE_VMACCEL_RPC=1)
