--- a/accelerators/vmaccel/cmake/libvmaccelmgr_local_client/CMakeLists.txt
+++ b/accelerators/vmaccel/cmake/libvmaccelmgr_local_client/CMakeLists.txt
@@ -29,4 +29,4 @@ set(CLIENT_SOURCES
 
 add_library(vmaccelmgr_local_client ${CLIENT_SOURCES})
 target_link_libraries(vmaccelmgr_local_client vmaccelmgr_server)
-target_compile_definitions(vmaccelmgr_local_client PUBLIC ENABLE_VMACCEL_LOCAL=1 ENABLE_VMACCEL_RPC=0)
+target_compile_definitions(vmaccelmgr_local_client PRIVATE ENABLE_VMACCEL_LOCAL=1 ENABLE_VMACCEL_RPC=0)
