[VMCL] Move vmaccel/vmcl_rpc_clnt. to vmaccel/vmcl_clnt.c
To support Hybrid compute, we move the RPC client library interface to
a client API interface that can toggle between local and rpc based upon
"clnt == NULL".

Testing Done: build, vmcl_membench (local), vmcl_rpc_membench (rpc)

--- a/accelerators/vmaccel/cmake/libvmaccel_rpc_client/CMakeLists.txt
+++ b/accelerators/vmaccel/cmake/libvmaccel_rpc_client/CMakeLists.txt
@@ -26,7 +26,7 @@
 
 set(CLIENT_SOURCES
    ../../src/vmaccel_callback_rpc_server.c
-   ../../src/vmaccel_rpc_clnt.c)
+   ../../src/vmaccel_clnt.c)
 
 add_library(vmaccel_rpc_client ${CLIENT_SOURCES})
 target_link_libraries(vmaccel_rpc_client vmaccel_rpc)
