--- a/accelerators/vmcl/cmake/libvmcl_local_client/CMakeLists.txt
+++ b/accelerators/vmcl/cmake/libvmcl_local_client/CMakeLists.txt
@@ -26,7 +26,7 @@
 
 set(CLIENT_SOURCES
    ../../src/vmcl_callback_rpc_server.c
-   ../../src/vmcl_rpc_clnt.c)
+   ../../src/vmcl_clnt.c)
 
 add_library(vmcl_local_client ${CLIENT_SOURCES})
 target_link_libraries(vmcl_local_client vmcl_server)
