[VMCL] Add hybrid compute build target and test
With this patch we will add the hybrid compute target to enable
local and remove compute. As an example, add the hybrid_compute
example source that runs a Matrix2D Add kernel on the local
accelerator and then migrates the working set to the remote
accelerator and dispatches the same Matrix2DAdd kernel.

Testing Done: build, hybrid_compute

--- a/accelerators/vmaccel/CMakeLists.txt
+++ b/accelerators/vmaccel/CMakeLists.txt
@@ -127,10 +127,12 @@ include_directories(${GLOBAL_INC})
 
 add_subdirectory(cmake/libvmaccel_rpc)
 add_subdirectory(cmake/libvmaccel_server)
+add_subdirectory(cmake/libvmaccel_hybrid_client)
 add_subdirectory(cmake/libvmaccel_local_client)
 add_subdirectory(cmake/libvmaccel_rpc_client)
 add_subdirectory(cmake/libvmaccelmgr_rpc)
 add_subdirectory(cmake/libvmaccelmgr_server)
+add_subdirectory(cmake/libvmaccelmgr_hybrid_client)
 add_subdirectory(cmake/libvmaccelmgr_local_client)
 add_subdirectory(cmake/libvmaccelmgr_rpc_client)
 add_subdirectory(cmake/vmaccel_server)
