--- a/frontends/vmaccel/CMakeLists.txt
+++ b/frontends/vmaccel/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2016-2019 VMware, Inc.
+# Copyright (c) 2016-2022 VMware, Inc.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -52,4 +52,5 @@ include_directories(${GLOBAL_INC})
 add_subdirectory(cmake/vmaccel_client)
 add_subdirectory(cmake/vmaccelmgr_client)
 add_subdirectory(cmake/libvmaccel)
+add_subdirectory(cmake/libvmaccel_hybrid)
 add_subdirectory(cmake/libvmaccel_local)
